clang/test/BSC/Negative/SafeZone/stringLiteral_to_constCharStar/stringLiteral_to_constCharStar.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

safe void test_fail(void) {
    char local_arr[] = "local"; 
    const char* p_from_stack = local_arr; // expected-error {{conversion from type 'char[6]' to 'const char *' is forbidden in the safe zone}}
}

int main(){

    return 0;
}